@@ -72,7 +72,7 @@ public class CrossrefClient implements Closeable {
 	}
 
 	public static void printLog(CrossrefRequest<?> request, String message) {
-		logger.info((request != null ? request+": " : "")+message);
+		logger.debug((request != null ? request+": " : "")+message);
 		//System.out.println((request != null ? request+": " : "")+message);
 	}
 	
@@ -107,7 +107,7 @@ public class CrossrefClient implements Closeable {
 				}
 			}
 			Future<?> f = executorService.submit(new CrossrefRequestTask<T>(this, request));
-			List<Future<?>> localFutures = this.futures.get(new Long(threadId));
+			List<Future<?>> localFutures = this.futures.get(Long.valueOf(threadId));
 			if (localFutures == null)
 				localFutures = new ArrayList<Future<?>>();
 			localFutures.add(f);
@@ -142,7 +142,7 @@ public class CrossrefClient implements Closeable {
 	public void finish(long threadId) {
 		synchronized(this.futures) {
 			try {
-				List<Future<?>> threadFutures = this.futures.get(new Long(threadId));
+				List<Future<?>> threadFutures = this.futures.get(Long.valueOf(threadId));
 				if (threadFutures != null) {
 //System.out.println("<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< thread: " + threadId + " / waiting for " + threadFutures.size() + " requests to finish...");
 					for(Future<?> future : threadFutures) {
